--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
+  },
+  "devDependencies": {
+    "mongoose-findorcreate": "^3.0.0"
   }
 }
